# Snake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/ai/: ai_enhancer.hpp  ai_optimization_engine.hpp  ai_optimizer.hpp  auto_optimization.hpp  auto_optimizer.hpp
include/analysis/: ai_advanced_analyzer.hpp  ai_analyzer.hpp  ai_enhanced_analyzer.hpp  performance_analysis.hpp  system_analyzer.hpp
include/analytics/: advanced_analytics.hpp  enhanced_analytics.hpp
include/automation/: ai_advanced_automation.hpp  ai_automation.hpp  automation_engine.hpp  system_automation.hpp
include/backup/: auto_backup.hpp  enhanced_backup.hpp  system_backup.hpp
include/cloud/: cloud_enhancer.hpp  cloud_integration.hpp  cloud_service.hpp
include/cooperation/: ai_cooperation.hpp  ai_enhanced_cooperation.hpp  system_cooperation.hpp
include/data/: data_protection.hpp
include/device/: device_manager.hpp
include/diagnosis/: system_diagnosis.hpp
include/extension/: ai_enhanced_extension.hpp  ai_extension.hpp  system_extension.hpp
include/hardware/: hardware_optimizer.hpp
include/integration/: ai_enhanced_integration.hpp  ai_integration.hpp  system_integration.hpp
include/management/: ai_enhanced_manager.hpp  ai_manager.hpp  system_manager.hpp
include/metrics/: metrics_collector.hpp
include/monitor/: ai_monitor.hpp  system_monitor.hpp
include/monitoring/: performance_monitor.hpp  realtime_monitor.hpp  system_monitor.hpp
include/notification/: custom_notification.hpp
include/optimization/: ai_optimizer.hpp  gpu_optimizer.hpp  system_optimizer.hpp
(+39 files in other folders)
